# nba-goat-simulator

./: .dockerignore  .gitignore  Dockerfile  GITHUB_DEPLOYMENT_GUIDE.md  WEEK1_PLAN.md  WEEK2_PLAN.md  deploy.sh  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  research_report_nba_data_api.md  supervisord.conf
.github/workflows/: deploy.yml
backend/: CMakeLists.txt
backend/data/: players.json
backend/src/: api.cpp  api.h  auth.cpp  auth.h  calculator.cpp  calculator.h  comments.cpp  comments.h  logger.cpp  logger.h  main.cpp  players.cpp  players.h
next-app/: DEPLOYMENT.md  package-lock.json  package.json  vercel.json
next-app/data/: players.json  players_expanded.json  seasons.json  seasons_expanded.json
next-app/scripts/: check_data.js  enrich_log.txt  enrich_profiles.py  expand_log.txt  expand_players.py  fast_expand.py  fix_nan.py  topup_players.py
next-app/src/app/: globals.css  layout.tsx  opengraph-image.tsx  robots.ts  sitemap.ts
next-app/src/components/: CompareSummary.tsx  CompareTable.tsx  ModeToggle.tsx  NBALogo.tsx  PlayerCard.tsx  (+5 more)
scripts/: add_nba_ids.py  expand_data.py  fetch_players.py  generate_players_data.py  migrate_players.py  submit_indexnow.py
src/: App.tsx
src/api/: index.ts
src/components/: AuthModal.tsx  CommentSection.tsx  PlayerCard.tsx  PlayerCompare.tsx  PlayerDatabase.tsx  PresetSelector.tsx  ProfilePage.tsx  RankingList.tsx  WeightSlider.tsx
src/contexts/: AuthContext.tsx
src/data/: players.json  players.ts
src/lib/: supabase.ts
src/types/: weights.ts
src/utils/: calculator.ts
(+19 files in other folders)
